--- a/basics/index.html
+++ b/basics/index.html
@@ -32,7 +32,7 @@
         <h2 id="current-calculation">0</h2>
         <h2>Result: <span id="current-result">0</span></h2>
     </section>
-    <!-- Connection with External JavaScript File -->
+    <!-- Connection with External JavaScript Files -->
     <script src="assets/scripts/vendor.js"></script>
     <script src="assets/scripts/app.js"></script>
 </body>
